[metadata]
name = vsm
version = 0.4.2
author = The Indiana Philosophy Ontology (InPhO) Project
author_email = inpho@indiana.edu
maintainer = Jaimie Murdock
maintainer_email = jaimie@inphoproject.org
home-page = http://inphodata.cogs.indiana.edu
download-url = http://github.com/inpho/vsm
summary = Vector space modeling for the InPhO Project
license = MIT License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
keywords =
    topic modeling
    lda

[files]
packages =
    vsm
